added CRUD Operation for /api/users/ api